# brains-luna-renderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  makefile
lib/clist/: list.h
src/: display.c  display.h  draw.c  draw.h  list.c  list.h  lunacolors.h  main.c  main.cpp  mesh.c  mesh.h  project.c  project.h  triangle.h  vector.c  vector.h
src/app/: app.cpp  app.h
src/core/: colors.h
src/engine/: mesh.cpp  mesh.h  project.cpp  project.h  triangle.cpp  triangle.h  vector.cpp  vector.h
src/render/: display.cpp  display.h  draw.cpp  draw.h  drawer.cpp  drawer.h  window.cpp  window.h
